# Spacetraders

./: .env.example  .flake8  .gitignore  LICENSE  README.md  main.py  pyproject.toml  register_agent.py  requirements.txt
.github/workflows/: ci.yml
cline_docs/: activeContext.md  productContext.md  progress.md  systemPatterns.md  techContext.md
game/: __init__.py  agent_manager.py  contract_manager.py  cooldown.py  fleet_manager.py  market_analyzer.py  mining.py  rate_limiter.py  register.py  shipyard.py  system_manager.py  trade_manager.py  trader.py
space-traders-api-client/: README.md  pyproject.toml
space-traders-api-client/space_traders_api_client/: client.py
space-traders-api-client/space_traders_api_client/models/: __init__.py  accept_contract_response_200.py  accept_contract_response_200_data.py  agent.py  chart.py  construction.py  construction_material.py  contract.py  contract_deliver_good.py  contract_payment.py  contract_terms.py  cooldown.py  create_chart_response_201.py  create_chart_response_201_data.py  create_ship_ship_scan_response_201.py  create_ship_ship_scan_response_201_data.py  create_ship_system_scan_response_201.py  create_ship_system_scan_response_201_data.py  create_ship_waypoint_scan_response_201.py  create_ship_waypoint_scan_response_201_data.py  create_survey_response_201.py  deliver_contract_body.py  (+155 more)
tests/: factories.py  test_agent_manager.py  test_contract_manager.py  test_market_analyzer.py  test_mining.py  test_rate_limiter.py  test_register.py  test_scan_systems.py  test_shipyard.py  test_system_manager.py  test_trader.py
(+55 files in other folders)
