[tool.poetry]
name = "spacetraders-automation"
version = "0.1.0"
description = "Automated SpaceTraders game using the official Python client"
authors = ["Your Name <your.email@example.com>"]
packages = [
    {include = "game"}
]

[tool.poetry.dependencies]
python = "^3.9"
space-traders-api-client = {path = "./space-traders-api-client", develop = true}
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
factory-boy = "^3.3.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
